fix: dark mode

--- a/src/app/(app)/globals.css
+++ b/src/app/(app)/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #1d1c1c;
+  --foreground: #ededed;
   --primary: #ff6b00;
   --secondary: #dcdbce;
 }
@@ -21,12 +21,6 @@
   --animate-minibounce: minibounce 5s ease-in-out infinite;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #1d1c1c;
-    --foreground: #ededed;
-  }
-}
 
 @utility scrollbar-hidden {
   &::-webkit-scrollbar {
@@ -47,9 +41,11 @@ body {
   0% {
     transform: scale(1);
   }
+
   50% {
     transform: scale(1.05);
   }
+
   100% {
     transform: scale(1);
   }
